WC5: fixed broken CSS for challenge header since the added votebutton

--- a/www/tpl/wc4/css/wechall4.css
+++ b/www/tpl/wc4/css/wechall4.css
@@ -757,6 +757,7 @@ form > .gwf_table > table {
 
 /** Challs **/
 .chall_head {
+	overflow: hidden;
 	height: 24px;
 	line-height: 24px;
 	vertical-align: middle;
